[package]
name = "dartminhash"
version = "0.1.7"
edition = "2024"
authors = ["jianshuzhao@yahoo.com"]
repository = "https://github.com/jianshu93/dartminhash-rs.git"
keywords = ["MinHash", "Weighted", "Jaccard", "Sketching", "Rejection_Sampling"]
license = "MIT OR Apache-2.0"
description = "Fast Sketching for Weighted Sets"

[features]
default = []
mixed_tab = []

[dependencies]

## tab-hash = { version = "0.3.1", path = "../rust-tab-hash" }
tab-hash = { git = "https://github.com/jianshu93/rust-tab-hash" }
mt19937 = "=3.1.0"
rand_core = "0.9.3"
